# ros2-mobile-robot

./: dead_reck_measures_script.py  dead_reckoning_measures.csv  readme.md
install/: local_setup.sh  setup.sh
install/localization/share/localization/: package.sh  package.xml
install/motion/lib/motion/: motion_node
install/motion/share/motion/: package.bash  package.sh  package.zsh
install/warehouse_robot_spawner_pkg/share/warehouse_robot_spawner_pkg/: package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/install/localization/lib/localization/: localization_node
src/install/localization/share/localization/: package.sh  package.xml
src/install/motion/share/motion/: package.sh  package.xml
src/install/warehouse_robot_spawner_pkg/share/warehouse_robot_spawner_pkg/: package.sh  package.xml
src/install/warehouse_robot_spawner_pkg/share/warehouse_robot_spawner_pkg/launch/: gazebo_world.launch.py
src/install/warehouse_robot_spawner_pkg/share/warehouse_robot_spawner_pkg/models/obstacle_course/: model.config  model.sdf
src/install/warehouse_robot_spawner_pkg/share/warehouse_robot_spawner_pkg/worlds/: warehouse.world
src/localization/: setup.py
src/localization/localization/: localization.py
src/log/: latest_build
src/motion/: setup.py
src/warehouse_robot_spawner_pkg/: setup.py
src/warehouse_robot_spawner_pkg/models/mobile_warehouse_robot/: model.config
src/warehouse_robot_spawner_pkg/models/obstacle_course/: model.sdf
(+2 files in other folders)
