<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization</name>
  <version>0.0.0</version>
  <description>A package to perform localization through dead reckoning</description>
  <maintainer email="henribfe@stud.ntnu.no">henribfe</maintainer>
  <license>Apache License 2.0</license>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>
  <depend>tf_transformations</depend>
  <depend>pandas</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
